feat: Initialise l'application avec la fenêtre principale, la structure de l'interface utilisateur, les pages et la configuration de base.

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "window_title": "Ultra Font Installer",
+  "window_title": "ULTRA FONT INSTALLER",
   "version": "Version 2.0",
   "credits": "Créé avec ❤️ par SHÔGUN",
   "about_desc": "Un installateur de polices moderne et élégant pour Windows",
