feat: Ajout des modes Machine à Écrire et Comparateur, refonte de la structure de l'interface utilisateur et mise à jour des outils de construction et de localisation.

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -7,7 +7,7 @@
   "library": "Bibliothèque",
   "store": "Google Fonts",
   "inspector": "Inspecteur",
-  "typewriter": "Machine à écrire",
+  "type writer": "Machine à écrire",
   "versus": "Versus",
   "pairing": "Appariement",
   "settings": "Paramètres",
@@ -41,13 +41,15 @@
   "restart_desc": "Redémarrer automatiquement l'Explorateur Windows après installation",
   "animated_bg": "Fond Animé",
   "animated_bg_desc": "Activer l'effet d'animation douce du fond d'écran",
+  "transparency": "Transparence",
+  "transparency_desc": "Effet de transparence de la fenêtre",
   "style": "Style",
   "size": "Taille",
   "unknown": "Inconnue",
   "alphabet": "Alphabet",
   "numbers": "Chiffres",
   "symbols": "Symboles",
-  "pangram": "Pangramme",
+  "pangram": "Portez ce vieux whisky au juge blond qui fume",
   "install": "Installer",
   "typewriter_mode": "Mode Machine à Écrire",
   "select_font": "Sélectionner Police",
